correccion de bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ set(SOURCE_FILES
   src/pages/page_main.c
   src/pages/page_one.c
   src/pages/page_two.c
+  src/pages/page_sender.c
+  src/app_state.c
 )
 
 add_executable(sdl_app ${SOURCE_FILES})
