--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -60,6 +60,48 @@
 				"$gcc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "cmake-configure",
+			"type": "shell",
+			"command": "cmake -S . -B build -G \"MinGW Makefiles\" -D CMAKE_SH=\"CMAKE_SH-NOTFOUND\"",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cmake-build",
+			"type": "shell",
+			"command": "cmake --build build -- -j",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cmake-build",
+			"type": "shell",
+			"command": "cmake --build build -- -j",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cmake-build",
+			"type": "shell",
+			"command": "cmake --build build -- -j",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cmake-build",
+			"type": "shell",
+			"command": "cmake --build build -- -j",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cmake-build",
+			"type": "shell",
+			"command": "cmake --build build -- -j",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
