Ejecucion de prueba

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "files.associations": {
         "windows.h": "c",
         "sdl_ttf.h": "c",
-        "format": "c"
+        "format": "c",
+        "string.h": "c"
     },
     // Help C/C++ extension find includes using CMake's compile_commands.json
     "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
