Proyecto SO - Arreglado y probado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,8 @@
 {
-    "terminal.integrated.defaultProfile.windows": "MSYS2 MinGW64",
-    "terminal.integrated.profiles.windows": {
-        "MSYS2 MinGW64": {
-            "path": "C:\\msys64\\usr\\bin\\bash.exe",
-            "args": ["--login", "-i"],
-            "env": {
-                "MSYSTEM": "MINGW64"
-            },
-            "icon": "terminal-bash"
-        }
-    },
-    "files.associations": {
-        "windows.h": "c",
-        "sdl_ttf.h": "c",
-        "format": "c",
-        "string.h": "c",
-        "processor.h": "c"
-    },
-    // Help C/C++ extension find includes using CMake's compile_commands.json
-    "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
-    // Fallback include paths for MSYS2 MinGW64 (adjust if installed elsewhere)
-    "C_Cpp.default.includePath": [
-        "${workspaceFolder}/src",
-        "C:/msys64/mingw64/include",
-        "C:/msys64/mingw64/include/SDL2"
-    ],
-    // Define MSYS2/MinGW macro to match build environment
-    "C_Cpp.default.defines": [
-        "__MINGW32__",
-        "_WIN32"
-    ]
+  "files.associations": {
+    "fcntl.h": "c",
+    "mman.h": "c",
+    "stdio.h": "c"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
